# unipay-app

./: README.md  commands.txt  package-lock.json  package.json
contracts/: lib.rs  test.rs
contracts/loan/: Cargo.toml
contracts/loan/src/: lib.rs
contracts/scholarship/: Cargo.toml
contracts/scholarship/src/: lib.rs
contracts/unipay-app-contracts/: Cargo.toml
contracts/unipay-app-contracts/src/: inversor_actions.rs  lib.rs  loan-contracts.rs  scolarship-contract.rs  storage.rs  token.rs  types.rs
contracts/unipay-contracts/src/: lib.rs  token.rs
src/: App.css  App.jsx  StellarContext.js  index.css
src/components/: LoanCalculator.css  LoanCalculator.jsx  Modal.css  Modal.jsx  Navbar.css  Navbar.jsx
src/pages/: Dashboard.css  Dashboard.jsx  Landing.css  Landing.jsx  PayLoan.css  PayLoan.jsx  RequestLoan.css  RequestLoan.jsx  Scholarship.css  Scholarship.jsx  TransactionHistory.css  TransactionHistory.jsx
src/styles/: global.css
unipay/: .env  cors-proxy.js  index.html  package-lock.json  package.json  server.js  vite.config.js
unipay-back/contracts/loan/: Cargo.toml
unipay-back/contracts/scholarship/: Cargo.toml
unipay-back/contracts/unipay-contracts/: Cargo.toml
unipay-back/contracts/unipay-contracts/src/: inversor_actions.rs
unipay-front/src/: App.css  App.jsx  RequestLoan.js
unipay/src/: App.css  App.jsx  Login.jsx  Register.jsx  index.css  main.jsx
unipay/src/components/: Footer.jsx  LoadingScreen.jsx  Navbar.jsx  Sidebar.jsx
unipay/src/context/: AuthContext.jsx
unipay/src/css/: App.css  Auth.css  Dashboard.css  Footer.css  (+8 more)
(+11 files in other folders)
