[package]
name = "unipay-app"
version = "1.0.0"
edition = "2021"
publish = false
CONTRACT_ID="CA4CPISCLKKHPPMHFURC7S4X5RQGFRTNNXSFYMA3AGSRMJ4HB7MQOJG2"

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

stellar contract deploy \
    --wasm target/wasm32-unknown-unknown/release/unipay_app.wasm \
    --source unipay-app \
    --network testnet \
    --alias unipay-app