
[package]
name = "unipay-contracts"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
loan_contract = { path = "contracts/loan" }
scholarship_contract = { path = "contracts/scholarship" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }



